level 10 and 11 support + adapted index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="navbar">
-    blue kayn
+    Roll estimator by blue kayn
   </div>
 <div class="container" id="container">
   <div class="controllers">
@@ -37,6 +37,10 @@
           <label for="level1_8">8</label>
           <input type="radio" name="level1" value="9" id="level1_9"/>
           <label for="level1_9">9</label>
+          <input type="radio" name="level1" value="10" id="level1_10"/>
+          <label for="level1_10">10</label>
+          <input type="radio" name="level1" value="11" id="level1_11"/>
+          <label for="level1_11">11</label>
         </div>
       </div>
        <div class='row'>
@@ -121,6 +125,10 @@
           <label for="level2_8">8</label>
           <input type="radio" name="level2" value="9" id="level2_9"/>
           <label for="level2_9">9</label>
+          <input type="radio" name="level2" value="10" id="level2_10"/>
+          <label for="level2_10">10</label>
+          <input type="radio" name="level2" value="11" id="level2_11"/>
+          <label for="level2_11">11</label>
         </div>
       </div>
        <div class='row'>
@@ -191,7 +199,7 @@
   <div id='tooltipProb1'>p(1) = 1</div>
   <div id='tooltipProb2'>p(2) = 2</div>
 </div>
-<div id="copyrightFooter">Copyright © <div id="year">2021</div> <a href="https://bluekayn.github.io">bluekayn.github.io</a></div>
+<div id="copyrightFooter">Copyright © <div id="year">2021</div> <a href="https://bluekayn.github.io">bluekayn.github.io</a> adapted to set 8 by EsPat</div>
 </div>
 </body>
 </html>
