--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>blue kayn</title>
+  <title>Roll estimator</title>
   <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Domine">
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="navbar">
-    Roll estimator by blue kayn
+    Roll estimator
   </div>
 <div class="container" id="container">
   <div class="controllers">
@@ -199,7 +199,7 @@
   <div id='tooltipProb1'>p(1) = 1</div>
   <div id='tooltipProb2'>p(2) = 2</div>
 </div>
-<div id="copyrightFooter">Copyright © <div id="year">2021</div> <a href="https://bluekayn.github.io">bluekayn.github.io</a> adapted to set 8 by EsPat</div>
+<div id="copyrightFooter"></div>
 </div>
 </body>
 </html>
